tests/negative/test_attr_owning.orb
data Foo;

eval (fnc dropFoo (val:Foo::noDrop) () {});

data Foo {
    x:i32
}::((drop dropFoo));

fnc main () () {
    eval (sym f:Foo);
    sym (x 0::((abcd f)));
};